project(armadillo_bits)

set(CMAKE_CXX_FLAGS "-O3")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set (InternalDev access.hpp
arma_cmath.hpp
arma_config.hpp
arma_forward.hpp
arma_ostream_bones.hpp
arma_ostream_meat.hpp
arma_rel_comparators.hpp
arma_rng_cxx11.hpp
arma_rng_cxx98.hpp
arma_rng.hpp
arma_static_check.hpp
arma_str.hpp
arma_version.hpp
arrayops_bones.hpp
arrayops_meat.hpp
auxlib_bones.hpp
auxlib_meat.hpp
band_helper.hpp
Base_bones.hpp
BaseCube_bones.hpp
BaseCube_meat.hpp
Base_meat.hpp
Col_bones.hpp
Col_meat.hpp
compiler_extra.hpp
compiler_setup.hpp
compiler_setup_post.hpp
cond_rel_bones.hpp
cond_rel_meat.hpp
config.hpp
config.hpp.cmake
constants.hpp
constants_old.hpp
Cube_bones.hpp
Cube_meat.hpp
CubeToMatOp_bones.hpp
CubeToMatOp_meat.hpp
debug.hpp
def_arpack.hpp
def_atlas.hpp
def_blas.hpp
def_hdf5.hpp
def_lapack.hpp
def_superlu.hpp
diagmat_proxy.hpp
diagview_bones.hpp
diagview_meat.hpp
diskio_bones.hpp
diskio_meat.hpp
distr_param.hpp
eGlue_bones.hpp
eglue_core_bones.hpp
eglue_core_meat.hpp
eGlueCube_bones.hpp
eGlueCube_meat.hpp
eGlue_meat.hpp
eop_aux.hpp
eOp_bones.hpp
eop_core_bones.hpp
eop_core_meat.hpp
eOpCube_bones.hpp
eOpCube_meat.hpp
eOp_meat.hpp
fft_engine.hpp
field_bones.hpp
field_meat.hpp
fn_accu.hpp
fn_all.hpp
fn_any.hpp
fn_approx_equal.hpp
fn_as_scalar.hpp
fn_chi2rnd.hpp
fn_chol.hpp
fn_clamp.hpp
fn_cond.hpp
fn_conv.hpp
fn_conv_to.hpp
fn_cor.hpp
fn_cov.hpp
fn_cross.hpp
fn_cumprod.hpp
fn_cumsum.hpp
fn_det.hpp
fn_diagmat.hpp
fn_diagvec.hpp
fn_diff.hpp
fn_dot.hpp
fn_eig_gen.hpp
fn_eig_pair.hpp
fn_eigs_gen.hpp
fn_eigs_sym.hpp
fn_eig_sym.hpp
fn_elem.hpp
fn_eps.hpp
fn_expmat.hpp
fn_eye.hpp
fn_fft2.hpp
fn_fft.hpp
fn_find.hpp
fn_find_unique.hpp
fn_flip.hpp
fn_hess.hpp
fn_histc.hpp
fn_hist.hpp
fn_index_max.hpp
fn_index_min.hpp
fn_inplace_strans.hpp
fn_inplace_trans.hpp
fn_interp1.hpp
fn_interp2.hpp
fn_intersect.hpp
fn_inv.hpp
fn_join.hpp
fn_kmeans.hpp
fn_kron.hpp
fn_log_det.hpp
fn_logmat.hpp
fn_lu.hpp
fn_max.hpp
fn_mean.hpp
fn_median.hpp
fn_min.hpp
fn_misc.hpp
fn_mvnrnd.hpp
fn_nonzeros.hpp
fn_normalise.hpp
fn_normcdf.hpp
fn_norm.hpp
fn_normpdf.hpp
fn_numel.hpp
fn_n_unique.hpp
fn_ones.hpp
fn_orth_null.hpp
fn_pinv.hpp
fn_polyfit.hpp
fn_polyval.hpp
fn_princomp.hpp
fn_prod.hpp
fn_qr.hpp
fn_qz.hpp
fn_randg.hpp
fn_randi.hpp
fn_randn.hpp
fn_randperm.hpp
fn_randu.hpp
fn_range.hpp
fn_rank.hpp
fn_regspace.hpp
fn_repelem.hpp
fn_repmat.hpp
fn_reshape.hpp
fn_resize.hpp
fn_reverse.hpp
fn_roots.hpp
fn_schur.hpp
fn_shift.hpp
fn_shuffle.hpp
fn_size.hpp
fn_solve.hpp
fn_sort.hpp
fn_sort_index.hpp
fn_speye.hpp
fn_spones.hpp
fn_sprandn.hpp
fn_sprandu.hpp
fn_spsolve.hpp
fn_sqrtmat.hpp
fn_stddev.hpp
fn_strans.hpp
fn_sum.hpp
fn_svd.hpp
fn_svds.hpp
fn_syl_lyap.hpp
fn_symmat.hpp
fn_toeplitz.hpp
fn_trace.hpp
fn_trans.hpp
fn_trapz.hpp
fn_trig.hpp
fn_trimat.hpp
fn_trunc_exp.hpp
fn_trunc_log.hpp
fn_unique.hpp
fn_var.hpp
fn_vectorise.hpp
fn_wishrnd.hpp
fn_zeros.hpp
Gen_bones.hpp
GenCube_bones.hpp
GenCube_meat.hpp
Gen_meat.hpp
GenSpecialiser.hpp
glue_affmul_bones.hpp
glue_affmul_meat.hpp
glue_atan2_bones.hpp
glue_atan2_meat.hpp
Glue_bones.hpp
glue_conv_bones.hpp
glue_conv_meat.hpp
glue_cor_bones.hpp
glue_cor_meat.hpp
glue_cov_bones.hpp
glue_cov_meat.hpp
glue_cross_bones.hpp
glue_cross_meat.hpp
GlueCube_bones.hpp
GlueCube_meat.hpp
glue_hist_bones.hpp
glue_histc_bones.hpp
glue_histc_meat.hpp
glue_hist_meat.hpp
glue_hypot_bones.hpp
glue_hypot_meat.hpp
glue_intersect_bones.hpp
glue_intersect_meat.hpp
glue_join_bones.hpp
glue_join_meat.hpp
glue_kron_bones.hpp
glue_kron_meat.hpp
glue_max_bones.hpp
glue_max_meat.hpp
Glue_meat.hpp
glue_min_bones.hpp
glue_min_meat.hpp
glue_mixed_bones.hpp
glue_mixed_meat.hpp
glue_mvnrnd_bones.hpp
glue_mvnrnd_meat.hpp
glue_polyfit_bones.hpp
glue_polyfit_meat.hpp
glue_polyval_bones.hpp
glue_polyval_meat.hpp
glue_relational_bones.hpp
glue_relational_meat.hpp
glue_solve_bones.hpp
glue_solve_meat.hpp
glue_times_bones.hpp
glue_times_meat.hpp
glue_toeplitz_bones.hpp
glue_toeplitz_meat.hpp
glue_trapz_bones.hpp
glue_trapz_meat.hpp
gmm_diag_bones.hpp
gmm_diag_meat.hpp
gmm_full_bones.hpp
gmm_full_meat.hpp
gmm_misc_bones.hpp
gmm_misc_meat.hpp
hdf5_misc.hpp
include_atlas.hpp
include_hdf5.hpp
include_superlu.hpp
injector_bones.hpp
injector_meat.hpp
MapMat_bones.hpp
MapMat_meat.hpp
Mat_bones.hpp
Mat_meat.hpp
memory.hpp
mp_misc.hpp
mtGlue_bones.hpp
mtGlueCube_bones.hpp
mtGlueCube_meat.hpp
mtGlue_meat.hpp
mtOp_bones.hpp
mtOpCube_bones.hpp
mtOpCube_meat.hpp
mtOp_meat.hpp
mtSpGlue_bones.hpp
mtSpGlue_meat.hpp
mtSpOp_bones.hpp
mtSpOp_meat.hpp
mul_gemm.hpp
mul_gemm_mixed.hpp
mul_gemv.hpp
mul_herk.hpp
mul_syrk.hpp
newarp_cx_attrib.hpp
newarp_DenseGenMatProd_bones.hpp
newarp_DenseGenMatProd_meat.hpp
newarp_DoubleShiftQR_bones.hpp
newarp_DoubleShiftQR_meat.hpp
newarp_EigsSelect.hpp
newarp_GenEigsSolver_bones.hpp
newarp_GenEigsSolver_meat.hpp
newarp_SortEigenvalue.hpp
newarp_SparseGenMatProd_bones.hpp
newarp_SparseGenMatProd_meat.hpp
newarp_SymEigsSolver_bones.hpp
newarp_SymEigsSolver_meat.hpp
newarp_TridiagEigen_bones.hpp
newarp_TridiagEigen_meat.hpp
newarp_UpperHessenbergEigen_bones.hpp
newarp_UpperHessenbergEigen_meat.hpp
newarp_UpperHessenbergQR_bones.hpp
newarp_UpperHessenbergQR_meat.hpp
op_all_bones.hpp
op_all_meat.hpp
op_any_bones.hpp
op_any_meat.hpp
Op_bones.hpp
op_chi2rnd_bones.hpp
op_chi2rnd_meat.hpp
op_chol_bones.hpp
op_chol_meat.hpp
op_clamp_bones.hpp
op_clamp_meat.hpp
op_cond_bones.hpp
op_cond_meat.hpp
op_cor_bones.hpp
op_cor_meat.hpp
op_cov_bones.hpp
op_cov_meat.hpp
OpCube_bones.hpp
OpCube_meat.hpp
op_cumprod_bones.hpp
op_cumprod_meat.hpp
op_cumsum_bones.hpp
op_cumsum_meat.hpp
op_cx_scalar_bones.hpp
op_cx_scalar_meat.hpp
op_diagmat_bones.hpp
op_diagmat_meat.hpp
op_diagvec_bones.hpp
op_diagvec_meat.hpp
op_diff_bones.hpp
op_diff_meat.hpp
op_dot_bones.hpp
op_dotext_bones.hpp
op_dotext_meat.hpp
op_dot_meat.hpp
operator_cube_div.hpp
operator_cube_minus.hpp
operator_cube_plus.hpp
operator_cube_relational.hpp
operator_cube_schur.hpp
operator_cube_times.hpp
operator_div.hpp
operator_minus.hpp
operator_ostream.hpp
operator_plus.hpp
operator_relational.hpp
operator_schur.hpp
operator_times.hpp
op_expmat_bones.hpp
op_expmat_meat.hpp
op_fft_bones.hpp
op_fft_meat.hpp
op_find_bones.hpp
op_find_meat.hpp
op_find_unique_bones.hpp
op_find_unique_meat.hpp
op_flip_bones.hpp
op_flip_meat.hpp
op_hist_bones.hpp
op_hist_meat.hpp
op_htrans_bones.hpp
op_htrans_meat.hpp
op_index_max_bones.hpp
op_index_max_meat.hpp
op_index_min_bones.hpp
op_index_min_meat.hpp
op_inv_bones.hpp
op_inv_meat.hpp
op_logmat_bones.hpp
op_logmat_meat.hpp
op_max_bones.hpp
op_max_meat.hpp
op_mean_bones.hpp
op_mean_meat.hpp
Op_meat.hpp
op_median_bones.hpp
op_median_meat.hpp
op_min_bones.hpp
op_min_meat.hpp
op_misc_bones.hpp
op_misc_meat.hpp
op_nonzeros_bones.hpp
op_nonzeros_meat.hpp
op_normalise_bones.hpp
op_normalise_meat.hpp
op_norm_bones.hpp
op_norm_meat.hpp
op_orth_null_bones.hpp
op_orth_null_meat.hpp
op_pinv_bones.hpp
op_pinv_meat.hpp
op_princomp_bones.hpp
op_princomp_meat.hpp
op_prod_bones.hpp
op_prod_meat.hpp
op_range_bones.hpp
op_range_meat.hpp
op_relational_bones.hpp
op_relational_meat.hpp
op_repelem_bones.hpp
op_repelem_meat.hpp
op_repmat_bones.hpp
op_repmat_meat.hpp
op_reshape_bones.hpp
op_reshape_meat.hpp
op_resize_bones.hpp
op_resize_meat.hpp
op_reverse_bones.hpp
op_reverse_meat.hpp
op_roots_bones.hpp
op_roots_meat.hpp
op_shift_bones.hpp
op_shift_meat.hpp
op_shuffle_bones.hpp
op_shuffle_meat.hpp
op_sort_bones.hpp
op_sort_index_bones.hpp
op_sort_index_meat.hpp
op_sort_meat.hpp
op_sp_minus_bones.hpp
op_sp_minus_meat.hpp
op_sp_plus_bones.hpp
op_sp_plus_meat.hpp
op_sqrtmat_bones.hpp
op_sqrtmat_meat.hpp
op_stddev_bones.hpp
op_stddev_meat.hpp
op_strans_bones.hpp
op_strans_meat.hpp
op_sum_bones.hpp
op_sum_meat.hpp
op_symmat_bones.hpp
op_symmat_meat.hpp
op_toeplitz_bones.hpp
op_toeplitz_meat.hpp
op_trimat_bones.hpp
op_trimat_meat.hpp
op_unique_bones.hpp
op_unique_meat.hpp
op_var_bones.hpp
op_var_meat.hpp
op_vectorise_bones.hpp
op_vectorise_meat.hpp
op_wishrnd_bones.hpp
op_wishrnd_meat.hpp
podarray_bones.hpp
podarray_meat.hpp
promote_type.hpp
ProxyCube.hpp
Proxy.hpp
restrictors.hpp
Row_bones.hpp
Row_meat.hpp
running_stat_bones.hpp
running_stat_meat.hpp
running_stat_vec_bones.hpp
running_stat_vec_meat.hpp
SizeCube_bones.hpp
SizeCube_meat.hpp
SizeMat_bones.hpp
SizeMat_meat.hpp
span.hpp
sp_auxlib_bones.hpp
sp_auxlib_meat.hpp
SpBase_bones.hpp
SpBase_meat.hpp
SpCol_bones.hpp
SpCol_meat.hpp
spdiagview_bones.hpp
spdiagview_meat.hpp
SpGlue_bones.hpp
spglue_elem_helper_bones.hpp
spglue_elem_helper_meat.hpp
spglue_join_bones.hpp
spglue_join_meat.hpp
spglue_kron_bones.hpp
spglue_kron_meat.hpp
spglue_max_bones.hpp
spglue_max_meat.hpp
SpGlue_meat.hpp
spglue_merge_bones.hpp
spglue_merge_meat.hpp
spglue_min_bones.hpp
spglue_min_meat.hpp
spglue_minus_bones.hpp
spglue_minus_meat.hpp
spglue_plus_bones.hpp
spglue_plus_meat.hpp
spglue_relational_bones.hpp
spglue_relational_meat.hpp
spglue_schur_bones.hpp
spglue_schur_meat.hpp
spglue_times_bones.hpp
spglue_times_meat.hpp
SpMat_bones.hpp
SpMat_iterators_meat.hpp
SpMat_meat.hpp
SpOp_bones.hpp
spop_diagmat_bones.hpp
spop_diagmat_meat.hpp
spop_htrans_bones.hpp
spop_htrans_meat.hpp
spop_max_bones.hpp
spop_max_meat.hpp
spop_mean_bones.hpp
spop_mean_meat.hpp
SpOp_meat.hpp
spop_min_bones.hpp
spop_min_meat.hpp
spop_misc_bones.hpp
spop_misc_meat.hpp
spop_normalise_bones.hpp
spop_normalise_meat.hpp
spop_repmat_bones.hpp
spop_repmat_meat.hpp
spop_reverse_bones.hpp
spop_reverse_meat.hpp
spop_strans_bones.hpp
spop_strans_meat.hpp
spop_sum_bones.hpp
spop_sum_meat.hpp
spop_symmat_bones.hpp
spop_symmat_meat.hpp
spop_trimat_bones.hpp
spop_trimat_meat.hpp
spop_var_bones.hpp
spop_var_meat.hpp
spop_vectorise_bones.hpp
spop_vectorise_meat.hpp
SpProxy.hpp
SpRow_bones.hpp
SpRow_meat.hpp
SpSubview_bones.hpp
SpSubview_iterators_meat.hpp
SpSubview_meat.hpp
SpToDOp_bones.hpp
SpToDOp_meat.hpp
SpValProxy_bones.hpp
SpValProxy_meat.hpp
strip.hpp
subview_bones.hpp
subview_cube_bones.hpp
subview_cube_each_bones.hpp
subview_cube_each_meat.hpp
subview_cube_meat.hpp
subview_cube_slices_bones.hpp
subview_cube_slices_meat.hpp
subview_each_bones.hpp
subview_each_meat.hpp
subview_elem1_bones.hpp
subview_elem1_meat.hpp
subview_elem2_bones.hpp
subview_elem2_meat.hpp
subview_field_bones.hpp
subview_field_meat.hpp
subview_meat.hpp
sympd_helper.hpp
traits.hpp
translate_arpack.hpp
translate_atlas.hpp
translate_blas.hpp
translate_lapack.hpp
translate_superlu.hpp
typedef_elem_check.hpp
typedef_elem.hpp
typedef_mat_fixed.hpp
typedef_mat.hpp
unwrap_cube.hpp
unwrap.hpp
unwrap_spmat.hpp
upgrade_val.hpp
wall_clock_bones.hpp
wall_clock_meat.hpp
xtrans_mat_bones.hpp
xtrans_mat_meat.hpp
xvec_htrans_bones.hpp
xvec_htrans_meat.hpp
)

add_library(${PROJECT_NAME} $InternalDev)
    
set_target_properties(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX)
